--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -19,7 +19,7 @@
       </ul>
     </div>
     <div class="content">
-      <img src="./logo.png" alt="">
+      <img src="./logo.png" alt="odin project logo">
       <div class="input">
         <input type="text">
       </div>
